# Video-Transition

./: CMakeLists.txt  README.md  stinger_transition.effect  stringer-transition-module.c  transition_stinger.c
